<resources>
    <string name="app_name">Mid-Year-Registration</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? sign up</string>
    <string name="need_an_account">Need an account?</string>
    <string name="wits_mid_year_registration">Wits Mid-Year Registration</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="username">Username</string>
    <string name="administrator">Administrator?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="logo">Wits Logo</string>
    <string name="signuppassword">signupPassword</string>
    <string name="loginpassword">loginPassword</string>
    <string name="welcome_to_the_wits_mid_year_registration">Welcome To The Wits Mid-Year Registration</string>
    <string name="password">Password</string>
    <string name="are_you_a_course_coordinator">Are you a course coordinator?</string>
    <string name="email_address_login">Email address</string>
    <string name="password_login">Password</string>
    <string name="email_address">Email address</string>
    <string name="logout">Logout</string>

    <string name="submit">Submit Form</string>
    <string name="course_name">Course Code:</string>
    <string name="add_image">Add Image</string>
    <string name="convert">Convert to PDF</string>
    <string name="std_no">Student number:</string>
    <string name="reset_email_address">Email address...</string>
    <string name="reset_password">Reset Password</string>
    <string name="press_the_menu_button_above">Press the menu button above</string>
    <string name="course_code_e_g_phys1000">Course code e.g PHYS1000</string>
    <string name="course_code_e_g_math1000">Course code e.g MATH1000</string>
    <string name="course_code_e_g_coms1000">Course code e.g COMS1000</string>
    <string name="email_address2">Email Address</string>
    <string name="update">Update</string>
    <string name="respond">Respond</string>
    <string name="wits_email">Wits email</string>
    <string name="wits_email_address">Wits email address</string>
    <string name="wits_email_login">Wits email</string>
    <string name="student_number2">Student number</string>
    <string name="course_code">Course Code</string>
    <string name="student_number3">Student number</string>
    <string name="course_code2">Course Code</string>
    <string name="no_comment">No response comment has been added to this concession request.</string>
    <string name="file_name">FILE NAME :</string>
    <string name="file_name1">File name</string>
    <string name="todo">TODO</string>
    <string name="write_a_comment">Write a comment</string>
    <string name="preview">PREVIEW</string>
    <string name="student_number1">Student Number</string>
    <string name="course_code1">Course Code</string>
    <string name="image3">Image</string>
    <string name="preview1">PREVIEW</string>
    <string name="add_view_edit_courses_that_you_coordinate">Add-View-Edit Courses That You Coordinate</string>
    <string name="courses_logo">courses logo</string>
    <string name="sign_in">Sign In</string>
    <string name="wits_logo">Wits Logo</string>

    <!--Computer Science Courses-->
    <string-array name="courses">

        <item>Course List</item>
        <!--Computer Science-->
        <item>COMS1015</item>
        <item>COMS1016</item>
        <item>COMS1017</item>
        <item>COMS1018</item>
        <item>COMS2002</item>
        <item>COMS2013</item>
        <item>COMS2014</item>
        <item>COMS2015</item>
        <item>COMS3002</item>
        <item>COMS3003</item>
        <item>COMS3005</item>
        <item>COMS3007</item>
        <item>COMS3008</item>
        <item>COMS3009</item>
        <item>COMS3010</item>
        <item>COMS3006</item>
        <item>COMS3011</item>
        <!--Applied Mathematics-->
        <item>APPM1006</item>
        <item>APPM2007</item>
        <item>APPM3017</item>
        <!--Mathematics-->
        <item>MATH1034</item>
        <item>MATH1036</item>
        <item>MATH1041</item>
        <item>MATH2003</item>
        <item>MATH2015</item>
        <item>MATH2019</item>
        <item>MATH2021</item>
        <item>MATH2022</item>
        <item>MATH2025</item>
        <item>MATH3001</item>
        <item>MATH3003</item>
        <item>MATH3004</item>
        <item>MATH3006</item>
        <item>MATH3009</item>
        <item>MATH3010</item>
        <item>MATH3031</item>
        <item>MATH3032</item>
        <item>MATH3034</item>
    </string-array>
</resources>
